Bug 270431 - Zooming into agendaview breaks scrolling
Summary: Zooming into agendaview breaks scrolling
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: agendaview (weekview) (other bugs)
Version First Reported In: GIT (master)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-08 12:40 UTC by Elias Probst
Modified: 2011-04-09 15:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing the broken zoom/scroll (18.51 KB, image/png)
2011-04-08 12:40 UTC, Elias Probst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2011-04-08 12:40:59 UTC
Created attachment 58706 [details]
Screenshot showing the broken zoom/scroll

Version:           GIT (master) (using KDE 4.6.2) 
OS:                Linux

When zooming into the agendaview, it isn't possible anymore to scroll to the bottom of the view.

Reproducible: Always

Steps to Reproduce:
→ Open KOrganizer
→ Select Agenda view mode/week view
→ Scroll into the view using Ctrl+Wheel

Actual Results:  
The view cannot be scrolled down to the later hours of the days, they're just not reachable through scrolling at all.

Expected Results:  
I'd expect to still be able to see the whole day by scrolling, even in zoomed in view.

See the attached screenshot.
The scrollbar is already at the bottom while the view ends at 9:00 instead of 23:59
Comment 1 Sergio Martins 2011-04-09 15:36:05 UTC
Git commit 99b1c84ff145005d7c1fe59b091b3c1cc7a7f759 by Sergio Martins.
Committed on 09/04/2011 at 16:41.
Pushed by smartins into branch 'master'.

Call updateGeometry() after zooming.

BUG: 270431

M  +7    -4    calendarviews/eventviews/agenda/agenda.cpp     
M  +2    -2    calendarviews/eventviews/agenda/agendaview.cpp     

http://commits.kde.org/kdepim/99b1c84ff145005d7c1fe59b091b3c1cc7a7f759