Call updateGeometry() after zooming.

BUG: 270431